--- a/charts/guard/templates/gateway.yaml
+++ b/charts/guard/templates/gateway.yaml
@@ -1,10 +1,29 @@
+{{- if .Values.guard.gateway.enabled }}
+{{- $gwname:= default "guard" $.Values.fullnameOverride }}
+apiVersion: gateway.networking.k8s.io/v1
+kind: GatewayClass
+metadata:
+  name: {{$gwname}}-gwc
+  labels:
+    {{- include "guard-helm.labels" $ | nindent 4 }}
+spec:
+  controllerName: gateway.envoyproxy.io/gatewayclass-controller
+---
+
 apiVersion: gateway.networking.k8s.io/v1
 kind: Gateway
 metadata:
-  name: eg
+  name: {{$gwname}}-gw
+  labels:
+    {{- include "guard-helm.labels" $ | nindent 4 }}
 spec:
   gatewayClassName: eg
   listeners:
     - name: http
       protocol: HTTP
-      port: 3070
+      port: {{ $.Values.guard.gateway.port }}
+      allowedRoutes:
+        kinds:
+        - kind: HTTPRoute
+
+{{- end }}
