--- a/charts/guard/templates/httproute-header.yaml
+++ b/charts/guard/templates/httproute-header.yaml
@@ -7,13 +7,15 @@
 # -H "target-service-id: polygon" -> "target-service-id: F021"
 #
 # For each service, multiple HTTPRoute resources are created:
-# - One HTTPRoute for the authoritative service ID 
+# - One HTTPRoute for the authoritative service ID
 # - One additional HTTPRoute for EACH service alias
 #
 # The HTTPRoute resources are created based on the `services` list in the `values.yaml` file.
 
 # Create an HTTPRoute resource for each authoritative service ID.
-{{- range .Values.services }}
+{{- if .Values.guard.gateway.enabled }}
+{{- $gwname:= default "guard" $.Values.fullnameOverride }}
+{{- range .Values.guard.services }}
 {{- $service := . }}
 ---
 apiVersion: gateway.networking.k8s.io/v1
@@ -22,20 +24,21 @@ kind: HTTPRoute
 metadata:
   # eg. F00C-header-route
   name: {{ $service.serviceId | lower }}-header-route
-  namespace: {{ $.Values.namespace }}
+  namespace: {{ $.Values.global.namespace }}
 
 spec:
   parentRefs:
-  - name: eg
-    namespace: {{ $.Values.namespace }}
+  - kind: Gateway
+    name: {{$gwname}}-gw
+    namespace: {{ $.Values.global.namespace }}
 
   rules:
   # Determine the backend service to route to.
   - backendRefs:
-    - name: {{ $.Values.serviceName }}
-      namespace: {{ $.Values.namespace }}
+    - name: {{ $.Values.global.serviceName }}
+      namespace: {{ $.Values.global.namespace }}
       port: {{ $.Values.port }}
-          
+
     matches:
     - path:
         type: PathPrefix
@@ -44,6 +47,23 @@ spec:
       - name: target-service-id
         value: "{{ $service.serviceId }}"
 
+---
+apiVersion: gateway.envoyproxy.io/v1alpha1
+kind: SecurityPolicy
+metadata:
+  name: {{ $service.serviceId | lower }}-header-auth-policy
+  namespace: {{ $.Values.global.namespace }}
+spec:
+  targetRefs:
+    - group: gateway.networking.k8s.io
+      kind: HTTPRoute
+      # eg. F00C-header-route - matches the HTTPRoute resource created above
+      name: {{ $service.serviceId | lower }}-header-route
+  extAuth:
+    grpc:
+      backendRefs:
+        - name: ext-auth-server
+          port: 10001
 # If the service has aliases, create an HTTPRoute resource for each alias.
 {{- if $service.aliases }}
 {{- range $service.aliases }}
@@ -54,18 +74,19 @@ kind: HTTPRoute
 metadata:
   # eg. F00C-eth-alias-header-route
   name: {{ $service.serviceId | lower }}-{{ . | lower }}-alias-header-route
-  namespace: {{ $.Values.namespace }}
+  namespace: {{ $.Values.global.namespace }}
 
 spec:
   parentRefs:
-  - name: eg
-    namespace: {{ $.Values.namespace }}
+  - kind: Gateway
+    name: {{$gwname}}-gw
+    namespace: {{ $.Values.global.namespace }}
 
   rules:
   # Determine the backend service to route to.
   - backendRefs:
-    - name: {{ $.Values.serviceName }}
-      namespace: {{ $.Values.namespace }}
+    - name: {{ $.Values.global.serviceName }}
+      namespace: {{ $.Values.global.namespace }}
       port: {{ $.Values.port }}
 
     filters:
@@ -75,7 +96,7 @@ spec:
         set:
         - name: "target-service-id"
           value: "{{ $service.serviceId }}"
-          
+
     matches:
       # Match any path prefix that starts with "/v1"
       - path:
@@ -85,6 +106,25 @@ spec:
         headers:
         - name: target-service-id
           value: "{{ . | lower }}"
+
+---
+apiVersion: gateway.envoyproxy.io/v1alpha1
+kind: SecurityPolicy
+metadata:
+  name: {{ $service.serviceId | lower }}-{{ . | lower }}-alias-header-auth-policy
+  namespace: {{ $.Values.global.namespace }}
+spec:
+  targetRefs:
+    - group: gateway.networking.k8s.io
+      kind: HTTPRoute
+      # eg. F00C-eth-alias-header-route - matches the HTTPRoute resource created above
+      name: {{ $service.serviceId | lower }}-{{ . | lower }}-alias-header-route
+  extAuth:
+    grpc:
+      backendRefs:
+        - name: ext-auth-server
+          port: 10001
+{{- end }}
 {{- end }}
 {{- end }}
 
