--- a/charts/guard/templates/http-header-routes.yaml
+++ b/charts/guard/templates/http-header-routes.yaml
@@ -26,7 +26,7 @@ metadata:
 
 spec:
   parentRefs:
-  - name: eg
+  - name: envoy-gateway
     namespace: {{ $.Values.namespace }}
 
   rules:
@@ -76,7 +76,7 @@ metadata:
 
 spec:
   parentRefs:
-  - name: eg
+  - name: envoy-gateway
     namespace: {{ $.Values.namespace }}
 
   rules:
