--- a/charts/guard/templates/http-notfound-route.yaml
+++ b/charts/guard/templates/http-notfound-route.yaml
@@ -11,7 +11,7 @@ metadata:
   name: resource-not-found-route
 spec:
   parentRefs:
-  - name: eg
+  - name: envoy-gateway
   rules:
   - matches:
     - path:
