--- a/charts/guard/templates/http-subdomain-routes.yaml
+++ b/charts/guard/templates/http-subdomain-routes.yaml
@@ -30,7 +30,7 @@ metadata:
 
 spec: 
   parentRefs:
-  - name: eg
+  - name: envoy-gateway
     namespace: {{ $.Values.namespace }}
 
   # Match requests based on their subdomain.
