--- a/charts/guard/values.yaml
+++ b/charts/guard/values.yaml
@@ -9,20 +9,17 @@ gateway:
       port: 3070
 
 # ---- Global settings ----
+# These settings may be overridden in a guard-values.yaml file for production use.
+
 # Domain is the base domain for subdomain matching.
 # For Example:  
 # - ethereum: eth.path.grove.city -> "target-service-id: F00C"
 # - polygon: polygon.path.grove.city -> "target-service-id: F021"
-
-# domain: path.grove.city  # TODO_IN_THIS_PR: Set back to this for deployment Base domain for subdomain matching
-domain: localhost # TODO_IN_THIS_PR: Remove this line
-
+domain: path.grove.city 
 # namespace is the namespace that both Envoy Gateway and the PATH service are deployed to.
-namespace: path-local # TODO_IN_THIS_PR: Set this to the final namespace we will use for deployment
-
+namespace: path-local 
 # serviceName is the name of the service that the PATH service is deployed to.
-serviceName: path-http # TODO_IN_THIS_PR: Set this to the final service name we will use for deployment
-
+serviceName: path-http 
 # Port is the port that the PATH service runs on in the cluster.
 # This is the port that Envoy Gateway will forward requests to.
 port: 3069
@@ -42,14 +39,28 @@ port: 3069
 # - eth.path.grove.city -> "target-service-id: F00C"
 # - polygon.path.grove.city -> "target-service-id: F021"
 services:
-  - serviceId: anvil
-  # - serviceId: F00C
-  #   aliases: 
-  #     - eth
-  #     - eth-mainnet
-  # - serviceId: F021
-  #   aliases: 
-  #     - polygon
-  #     - polygon-mainnet
+  - serviceId: F00C
+    aliases: 
+      - eth
+      - eth-mainnet
+  - serviceId: F021
+    aliases: 
+      - polygon
+      - polygon-mainnet
 
 # Add other services here ...
+
+# ---- Gateway Endpoints ----
+
+# Gateway endpoints define the allowed endpoints for a PATH instance.
+# For a detailed breakdown of the possible format of this file, see:
+# - https://path.grove.city/develop/envoy/envoy_config#4-gateway-endpoints-data---gateway-endpointsyaml
+# - https://path.grove.city/develop/envoy/walkthrough#gateway-endpoint-authorization
+#
+# IMPORTANT: This default value should be overridden in a `guard-values.yaml` file for production use.
+# This value is only used if a database is not used as the data source.
+gatewayEndpointsData: |
+  endpoints:                
+    test_endpoint:                                               
+      auth:
+        api_key: "test_api_key"
