--- a/charts/guard/templates/ext-auth-server.yaml
+++ b/charts/guard/templates/ext-auth-server.yaml
@@ -3,6 +3,9 @@ apiVersion: apps/v1
 kind: Deployment
 metadata:
   name: ext-auth-server
+  # Restart the External Auth Server if the gateway endpoints data changes.
+  annotations:
+    configChecksum: "{{ .Values.gatewayEndpointsData | sha256sum }}"
 spec:
   replicas: 1
   selector:
@@ -12,7 +15,15 @@ spec:
     metadata:
       labels:
         app: ext-auth-server
+      # Restart the External Auth Server if the gateway endpoints data changes.
+      annotations:
+        configChecksum: "{{ .Values.gatewayEndpointsData | sha256sum }}"
     spec:
+      # Wait for the PADS server to be ready before starting the External Auth Server.
+      initContainers:
+      - name: wait-for-pads
+        image: busybox
+        command: ['sh', '-c', 'until nc -z ext-auth-pads 10002; do echo waiting for ext-auth-pads; sleep 2; done']
       containers:
       - name: ext-auth-server
         image: ghcr.io/buildwithgrove/ext-auth-server:latest
