--- a/charts/guard/templates/ext-auth-server.yaml
+++ b/charts/guard/templates/ext-auth-server.yaml
@@ -16,11 +16,6 @@ spec:
         {{- include "guard-helm.labels" $ | nindent 8 }}
         app: {{$name}}-auth-server
     spec:
-      # Wait for the PADS pod to be ready before starting the External Auth Server.
-      initContainers:
-      - name: wait-for-pads
-        image: busybox
-        command: ['sh', '-c', 'until nc -z ext-auth-pads 10002; do echo waiting for PADS pod; sleep 2; done']
       containers:
       - name: ext-auth-server
         image: ghcr.io/buildwithgrove/ext-auth-server:latest
@@ -50,6 +45,8 @@ apiVersion: v1
 kind: ConfigMap
 metadata:
   name: auth-server-config
-data: {{- toYaml .Values.pads.configMap | nindent 2 }}
+data:
+  .config.yaml: |-
+    {{- index .Values.authServer.configMap ".config.yaml" | nindent 4 }}
 
 {{- end }}
