--- a/charts/guard/values.yaml
+++ b/charts/guard/values.yaml
@@ -67,10 +67,11 @@ authServer:
 
   # TODO_MVP(@commoddity): Modify this config to use TLS for
   # the gRPC connection to the PADS server.
+  # TODO_IMPROVE(@commoddity): Update to use simple env vars for auth server instead of a YAML
   configMap:
     .config.yaml: |
       auth_server_config:
-        grpc_host_port: ext-auth-pads:10002
+        grpc_host_port: guard-pads:10002
         grpc_use_insecure_credentials: true
         endpoint_id_extractor_type: header
 
@@ -79,10 +80,18 @@ pads:
   enabled: true
   replicas: 1
   port: 10002
-  # IMPORTANT: Exactly one of the following variables below must be set:
-  # - YAML_FILEPATH
-  # - POSTGRES_CONNECTION_STRING
+  # IMPORTANT: Exactly one of the following sections below must be set:
+  # - 1. YAML_FILEPATH
+  # - 2. POSTGRES_CONNECTION_STRING
   # An error will be thrown if neither or both are set.
+
+  # -- 1. YAML_FILEPATH --
+  # IMPORTANT: To use a Postgres database as the PADS data source, comment out
+  # the below section and use the POSTGRES_CONNECTION_STRING section instead.
+  #
+  # If the YAML_FILEPATH environment variable is set, 
+  # PADS will use the file at the specified path as the data source.
+
   env:
   - name: YAML_FILEPATH
     value: ".gateway-endpoints.yaml"
@@ -96,9 +105,25 @@ pads:
   # For a detailed breakdown of the possible format of this file, see:
   # - https://path.grove.city/develop/envoy/envoy_config#4-gateway-endpoints-data---gateway-endpointsyaml
   # - https://path.grove.city/develop/envoy/walkthrough#gateway-endpoint-authorization
+  #
+  # IMPORTANT: For a production deployment, if using a YAML file as the PADS data source,
+  # the `configMap` field should be overridden with the actual gateway endpoints configuration.
   configMap:
     .gateway-endpoints.yaml: |
-    endpoints:
-      test_endpoint:
-        auth:
-          api_key: "test_api_key"
+      endpoints:
+        test_endpoint:
+          auth:
+            api_key: "test_api_key"
+
+  # -- 2. POSTGRES_CONNECTION_STRING --
+  # IMPORTANT: To use a Postgres database as the PADS data source,
+  # uncomment the env variable below and set the value to the connection string.
+  #
+  # If the POSTGRES_CONNECTION_STRING environment variable is set,
+  # PADS will use the specified connection string to connect to a Postgres database as the data source.
+  # For more details, see the documentation for the PADS Postgres data source:
+  # https://path.grove.city/develop/pads/postgres
+
+  # env:
+  # - name: POSTGRES_CONNECTION_STRING
+  #   value: "postgres://user:password@host:port/database" # Replace with your Postgres connection string
