--- a/charts/guard/values.yaml
+++ b/charts/guard/values.yaml
@@ -58,15 +58,7 @@ authServer:
   enabled: true
   replicas: 1
   port: 10001
-  # VolumeMounts are used to specify a configuration file for auth server.
-  # Configuration must be declared specifying mountPath and subPath.
-  volumeMounts:
-    - name: config-volume
-      mountPath: /app/config/.config.yaml
-      subPath: .config.yaml
-
-  # TODO_MVP(@commoddity): Modify this config to use TLS for
-  # the gRPC connection to the PADS server.
+  # TODO_MVP(@commoddity): Modify this config to use TLS for the gRPC connection to the PADS server.
   # TODO_IMPROVE(@commoddity): Update to use simple env vars for auth server instead of a YAML
   configMap:
     .config.yaml: |
@@ -95,19 +87,13 @@ pads:
   env:
   - name: YAML_FILEPATH
     value: ".gateway-endpoints.yaml"
-  # VolumeMounts are used to specify an endpoints configuration mounted to paths.
-  # Configuration must be declared specifying mountPath and subPath.
-  volumeMounts:
-    - name: endpoint-data-volume
-      mountPath: /app/.gateway-endpoints.yaml
-      subPath: .gateway-endpoints.yaml
   # Gateway endpoints define the allowed endpoints for a PATH instance.
   # For a detailed breakdown of the possible format of this file, see:
   # - https://path.grove.city/develop/envoy/envoy_config#4-gateway-endpoints-data---gateway-endpointsyaml
   # - https://path.grove.city/develop/envoy/walkthrough#gateway-endpoint-authorization
   #
   # IMPORTANT: For a production deployment, if using a YAML file as the PADS data source,
-  # the `configMap` field should be overridden with the actual gateway endpoints configuration.
+  # the `pads.configMap` field should be overridden with the actual gateway endpoints configuration.
   configMap:
     .gateway-endpoints.yaml: |
       endpoints:
@@ -115,15 +101,15 @@ pads:
           auth:
             api_key: "test_api_key"
 
-  # -- 2. POSTGRES_CONNECTION_STRING --
-  # IMPORTANT: To use a Postgres database as the PADS data source,
-  # uncomment the env variable below and set the value to the connection string.
-  #
-  # If the POSTGRES_CONNECTION_STRING environment variable is set,
-  # PADS will use the specified connection string to connect to a Postgres database as the data source.
-  # For more details, see the documentation for the PADS Postgres data source:
-  # https://path.grove.city/develop/pads/postgres
-
+  # # -- 2. POSTGRES_CONNECTION_STRING --
+  # # IMPORTANT: To use a Postgres database as the PADS data source,
+  # # uncomment the env variable below and set the value to the connection string.
+  # #
+  # # If the POSTGRES_CONNECTION_STRING environment variable is set,
+  # # PADS will use the specified connection string to connect to a Postgres database as the data source.
+  # # For more details, see the documentation for the PADS Postgres data source:
+  # # https://path.grove.city/develop/pads/postgres
   # env:
   # - name: POSTGRES_CONNECTION_STRING
   #   value: "postgres://user:password@host:port/database" # Replace with your Postgres connection string
+
