chore: rename files for auth server and pads

--- a/charts/guard/templates/auth-pads.yaml
+++ b/charts/guard/templates/auth-pads.yaml
@@ -33,7 +33,7 @@ spec:
         - containerPort: {{ .Values.pads.port }}
         volumeMounts:
           - name: pads-data-volume
-            mountPath: /app
+            mountPath: /app/data
       volumes:
       - name: pads-data-volume
         configMap:
