--- a/charts/guard/templates/auth-pads.yaml
+++ b/charts/guard/templates/auth-pads.yaml
@@ -1,7 +1,11 @@
-# PADS (PATH Auth Data Server) is a gRPC server that provides Gateway Endpoint
-# data from a data source to the Go External Authorization Server in order to enable
-# authorization for the PATH Gateway. The nature of the data source is configurable,
-# for example it could be a YAML file or a Postgres database.
+# PADS (PATH Auth Data Server) Helm Chart
+#
+# A gRPC server that provides Gateway Endpoint data from a configurable data source 
+# to the Go External Authorization Server, enabling authorization for the PATH Gateway.
+# 
+# Data sources can include:
+#   - YAML files
+#   - Postgres databases
 #
 # Github Repo: https://github.com/buildwithgrove/path-auth-data-server
 {{- if .Values.pads.enabled }}
