--- a/charts/guard/templates/httproute-notfound.yaml
+++ b/charts/guard/templates/httproute-notfound.yaml
@@ -1,9 +1,10 @@
-# This HTTPRoute is a catch all route that returns a 404 Not Found error with a JSON body.
-# It is used to catch all requests that do not match any other routes.
+# HTTPRoute - Catch-all 404 Handler
 #
-# For example, if a user makes a request to a service that is not configured in the
-# `values.yaml` files' `services` array or a `*-values.yaml` file that is applied to the
-# GUARD service, this route will return a 404 Not Found error.
+# Returns a 404 Not Found error with a JSON body for any requests that don't match other routes.
+#
+# Use cases:
+#   - Requests to services not configured in the `values.yaml` file's `services` array
+#   - Requests to services not configured in any `*-values.yaml` file applied to the GUARD service
 {{- if .Values.guard.gateway.enabled }}
 {{- $gwname:= default "guard" $.Values.fullnameOverride }}
 apiVersion: gateway.networking.k8s.io/v1
