--- a/charts/guard/Chart.yaml
+++ b/charts/guard/Chart.yaml
@@ -1,9 +1,9 @@
-   apiVersion: v2
-   name: guard
-   description: A Helm chart for deploying Envoy Gateway
-   version: 0.1.0
-   appVersion: "1.0"
-   dependencies:
-     - name: gateway-helm
-       version: v1.3.0
-       repository: "oci://docker.io/envoyproxy"
+apiVersion: v2
+name: guard
+description: A Helm chart for deploying GUARD (Gateway Utilities for Authentication, Routing & Defense) in production or development environments
+version: 0.1.0
+appVersion: "1.0"
+dependencies:
+  - name: gateway-helm
+    version: v1.3.0
+    repository: "oci://docker.io/envoyproxy"
