--- a/charts/guard/values.yaml
+++ b/charts/guard/values.yaml
@@ -1,6 +1,6 @@
 # The global settings for the GUARD Helm chart.
 #
-# These values will be used if the values are not overridden 
+# These values will be used if the values are not overridden
 # by applying an additional `values.yaml` file when installing.
 
 # ---- Envoy Gateway ----
@@ -25,11 +25,11 @@ fullnameOverride: guard
 global:
   # domain will be used for matching subdomains in the HTTPRoutes.
   # For example, hostnames will be created for `<SERVICE_ID>.path.grove.city`.
-  domain: path.grove.city  
+  domain: path.grove.city
   # namespace is the namespace that both Envoy Gateway and the PATH service are deployed to.
   namespace: path
   # serviceName is the name of the service that the PATH service is deployed to.
-  serviceName: path-http 
+  serviceName: path-http
 
   # Port is the port that the PATH service runs on in the cluster.
   # This is the port that Envoy Gateway will forward requests to.
@@ -60,7 +60,7 @@ guard:
   #
   # IMPORTANT: For production deployments, the `services` field
   # should be overridden with the actual services that will be
-  # routed to the PATH backend using a `guard-values.yaml` file.
+  # routed to the PATH backend using a `values.yaml` file.
   services:
     - serviceId: F00C
       aliases:
@@ -79,11 +79,11 @@ authServer:
   env:
     - name: PORT
       value: "10001"
-    # GRPC_HOST_PORT=guard-pads:10002 is the value to point to the default 
+    # GRPC_HOST_PORT=guard-pads:10002 is the value to point to the default
     # PADS server in the cluster created by the GUARD Helm Chart.
     - name: GRPC_HOST_PORT
       value: guard-pads:10002
-    # GRPC_USE_INSECURE_CREDENTIALS=true is required to run PEAS in the 
+    # GRPC_USE_INSECURE_CREDENTIALS=true is required to run PEAS in the
     # cluster created by the GUARD Helm Chart, as PADS does not have TLS
     # enabled by default.
     - name: GRPC_USE_INSECURE_CREDENTIALS
@@ -103,7 +103,7 @@ pads:
   # IMPORTANT: To use a Postgres database as the PADS data source, comment out
   # the below section and use the POSTGRES_CONNECTION_STRING section instead.
   #
-  # If the YAML_FILEPATH environment variable is set, 
+  # If the YAML_FILEPATH environment variable is set,
   # PADS will use the file at the specified path as the data source.
 
   env:
@@ -114,7 +114,7 @@ pads:
     value: "/app/data/.gateway-endpoints.yaml"
   # Gateway endpoints define the allowed endpoints for a PATH instance.
   # For a detailed breakdown of the possible format of this file, see:
-  # - See gateway endpoints yamla at https://path.grove.city/develop/envoy/envoy_config 
+  # - See gateway endpoints YAML at https://path.grove.city/develop/envoy/envoy_config
   # - See endpoint authorization at https://path.grove.city/develop/envoy/walkthrough
   #
   # IMPORTANT: For a production deployment, if using a YAML file as the PADS data source,
