--- a/charts/path/Chart.yaml
+++ b/charts/path/Chart.yaml
@@ -4,3 +4,6 @@ description: A Helm chart for Kubernetes
 name: path
 type: application
 version: 0.1.8
+# TODO_MVP(@commoddity,@adshmh): Update PATH to implement Issue #26, which
+# makes GUARD & WATCH dependencies of this PATH helm chart.
+# https://github.com/buildwithgrove/helm-charts/issues/26
