--- a/charts/path/Chart.yaml
+++ b/charts/path/Chart.yaml
@@ -4,6 +4,7 @@ description: A Helm chart for Kubernetes
 name: path
 type: application
 version: 0.1.9
-# TODO_MVP(@commoddity,@adshmh): Update PATH to implement Issue #26, which
-# makes GUARD & WATCH dependencies of this PATH helm chart.
-# https://github.com/buildwithgrove/helm-charts/issues/26
+dependencies:
+  - name: guard
+    version: 0.1.1
+    repository: https://buildwithgrove.github.io/helm-charts/
