--- a/charts/path/Chart.yaml
+++ b/charts/path/Chart.yaml
@@ -1,6 +1,6 @@
 apiVersion: v2
 appVersion: 0.0.16
-description: A Helm chart for Kubernetes
+description: A Helm chart for deploying PATH (PATH API & Toolkit Harness) in production or development environments
 name: path
 type: application
 version: 0.1.9
